Fix for message box auto-sizing behavior on resize; menu z-index fix

--- a/stylesheets/_global.scss
+++ b/stylesheets/_global.scss
@@ -98,6 +98,7 @@ button.back {
     display: none;
     position: absolute;
     color: $grey_d;
+    z-index: 1;
 
     top: 100%;
     left: 0;
