--- a/stylesheets/manifest.css
+++ b/stylesheets/manifest.css
@@ -95,6 +95,7 @@ button.back {
     display: none;
     position: absolute;
     color: #454545;
+    z-index: 1;
     top: 100%;
     left: 0;
     margin: 0;
